--- a/application/modules/default/views/scripts/product/viewscripts/input_cat_id.phtml
+++ b/application/modules/default/views/scripts/product/viewscripts/input_cat_id.phtml
@@ -21,37 +21,20 @@
  **/
 ?>
 <div class="form-group">
-  <div class="col-sm-4 margin-top-15">
+  <div class="col-sm-12 margin-top-15">
       <?php if ($this->element->isRequired()) { ?>
         <div class="small grey bold-font pull-left margin-right-5">*</div>
       <?php } ?>
     <label class="form-label" for="<?= $this->escape($this->element->getName()) ?>">Category</label>
   </div>
-  <div class="col-sm-8 margin-top-15">
-    <div class="small grey bold-font pull-left margin-right-5">*</div>
-    <label class="form-label">Sub-Category</label>
-  </div>
-  <div class="col-sm-4">
-    <select data-target="wrap_project_subcategory_id"
-            data-sub-target="project_sub_subcategory_id"
-            class="required form-control product_select_cat"
-            id="<?= $this->escape($this->element->getName()) ?>"
-            name="<?= $this->escape($this->element->getName()) ?>">
-        <?php
-        // force $value to array so we can compare multiple values to multiple
-        // options; also ensure it's a string for comparison purposes.
-        $value = array_map('strval', (array)$this->element->getValue());
-        foreach ($this->element->getMultiOptions() as $opt_value => $opt_label) {
-            // selected?
-            $opt = '';
-            if (in_array((string)$opt_value, $value)) {
-                $opt .= ' selected="selected"';
-            }
-            ?>
-          <option <?= $opt ?> value="<?= $opt_value ?>"><?= $opt_label ?></option><?php
-        }
-        ?>
-    </select>
+  <div id="wrapper_form_cat" class="col-sm-12">
+    <input type="hidden"
+           id="<?= $this->escape($this->element->getName()) ?>"
+           name="<?= $this->escape($this->element->getName()) ?>"
+           value="<?= $this->escape($this->element->getValue()) ?>"
+           >
+    <div id="wrapper_cat_id">
+    </div>
       <?php if ($this->element->getMessages()) {
           $errorHtml = '';
           foreach ($this->element->getMessages() as $currentError) {
@@ -61,4 +44,5 @@
           <?php echo $errorHtml ?>
       <?php } ?>
   </div>
+  <div id="wrapper_sub_cat"></div>
 </div>
