--- a/application/modules/default/views/scripts/product/viewscripts/input_title.phtml
+++ b/application/modules/default/views/scripts/product/viewscripts/input_title.phtml
@@ -25,8 +25,7 @@
         <?php if ($this->element->isRequired()) { ?>
             <div class="small grey bold-font pull-left margin-right-5">*</div>
         <?php } ?>
-        <label class="form-label" for="<?= $this->escape($this->element->getName()) ?>">Product Name (4 letters
-                                                                                        min.)</label>
+        <label class="form-label" for="<?= $this->escape($this->element->getName()) ?>">Product Name (4 letters min.)</label>
     </div>
     <div class="col-sm-12">
         <input id="<?= $this->escape($this->element->getName()) ?>"
