--- a/application/modules/default/views/scripts/user/products.phtml
+++ b/application/modules/default/views/scripts/user/products.phtml
@@ -110,6 +110,235 @@ $this->inlineScript()->appendScript(
         });
     ');
 ?>
+<!-- updates -->
+<div id="modal-updates"
+     class="modal fade"
+     role="dialog"
+     aria-labelledby="modal-updates-label"
+     data-product-id=""
+     data-product-title="">
+    <div class="modal-dialog content-modal" style="width: 95%">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h3 id="modal-updates-label" data-updates-label=""><?= $this->translate('Changelog') ?></h3>
+            </div>
+            <div class="modal-body" style="font-size: small;">
+	            <div role="form" class="">
+	            	<input type="hidden" id="update-id" data-update-id="" id="update-id" value="">
+                        <?php /**
+				    <div class="form-group">
+				      <label for="tile">Product Version:</label>
+				      <input type="text" id="product-version" data-product-version="" class="form-control input-sm" id="title" placeholder="Product Version Number">
+				    </div>
+                         * 
+                         */?>
+	            	<div class="form-group">
+				      <label for="tile">Changelog Title:</label>
+				      <input type="text" id="update-title" data-update-title="" class="form-control input-sm" id="title" placeholder="Enter a Changelog Title">
+				    </div>
+				    <div class="form-group">
+				      <label for="text">Changelog Text:</label>
+				      <textarea id="update-text" data-update-text="" class="form-control input-sm" rows="3" placeholder="Enter a Changelog Text"></textarea>
+				    </div>
+				    <button class="btn btn-native pull-right btn-xs btn-file-action" data-updates-cancel-btn=""><?= $this->translate('Cancel') ?></button>
+				    <button type="submit" class="btn btn-native pull-right btn-xs btn-file-action" data-add-update-btn="">Save</button>
+				</div>
+
+            	<article id="update-list">
+            	</article>
+
+
+            </div>
+            <div class="modal-footer">
+
+            </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script type="text/javascript">
+    $(function () {
+    	var Base64={_keyStr:"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/=",encode:function(e){var t="";var n,r,i,s,o,u,a;var f=0;e=Base64._utf8_encode(e);while(f<e.length){n=e.charCodeAt(f++);r=e.charCodeAt(f++);i=e.charCodeAt(f++);s=n>>2;o=(n&3)<<4|r>>4;u=(r&15)<<2|i>>6;a=i&63;if(isNaN(r)){u=a=64}else if(isNaN(i)){a=64}t=t+this._keyStr.charAt(s)+this._keyStr.charAt(o)+this._keyStr.charAt(u)+this._keyStr.charAt(a)}return t},decode:function(e){var t="";var n,r,i;var s,o,u,a;var f=0;e=e.replace(/[^A-Za-z0-9\+\/\=]/g,"");while(f<e.length){s=this._keyStr.indexOf(e.charAt(f++));o=this._keyStr.indexOf(e.charAt(f++));u=this._keyStr.indexOf(e.charAt(f++));a=this._keyStr.indexOf(e.charAt(f++));n=s<<2|o>>4;r=(o&15)<<4|u>>2;i=(u&3)<<6|a;t=t+String.fromCharCode(n);if(u!=64){t=t+String.fromCharCode(r)}if(a!=64){t=t+String.fromCharCode(i)}}t=Base64._utf8_decode(t);return t},_utf8_encode:function(e){e=e.replace(/\r\n/g,"\n");var t="";for(var n=0;n<e.length;n++){var r=e.charCodeAt(n);if(r<128){t+=String.fromCharCode(r)}else if(r>127&&r<2048){t+=String.fromCharCode(r>>6|192);t+=String.fromCharCode(r&63|128)}else{t+=String.fromCharCode(r>>12|224);t+=String.fromCharCode(r>>6&63|128);t+=String.fromCharCode(r&63|128)}}return t},_utf8_decode:function(e){var t="";var n=0;var r=c1=c2=0;while(n<e.length){r=e.charCodeAt(n);if(r<128){t+=String.fromCharCode(r);n++}else if(r>191&&r<224){c2=e.charCodeAt(n+1);t+=String.fromCharCode((r&31)<<6|c2&63);n+=2}else{c2=e.charCodeAt(n+1);c3=e.charCodeAt(n+2);t+=String.fromCharCode((r&15)<<12|(c2&63)<<6|c3&63);n+=3}}return t}}
+
+        $('button[rel="tooltip"]').tooltip();
+
+        var $modalPpload = $('#modal-updates');
+        
+        $('a[href="#modal-updates"]').on('click', function (event) {
+            event.preventDefault();
+            $modalPpload.attr('data-product-id', $(this).attr('data-product-id'));
+            $modalPpload.attr('data-product-title', $(this).attr('data-product-title'));
+
+            $modalPpload.find('h3[data-ppload-label]').html('Changelog for ' + $modalPpload.attr('data-product-tile'));
+
+            $modalPpload.find('#update-list').html('');
+
+            if ($modalPpload.attr('data-product-id')) {
+                getUpdates();
+            }
+
+        });
+        
+
+        function getUpdates(page) {
+        	$modalPpload.find('#update-list').html('');
+
+            var productId = $modalPpload.attr('data-product-id');
+            $.ajax({
+                url: '/p/'+productId+'/getupdatesajax/',
+                type: 'GET',
+                data: {
+                    format: 'json',
+                    ignore_status_code: 1
+                },
+                dataType: 'json',
+                success: function (data, textStatus, jqXHR) {
+                    if (data.status != 'success') {
+                        return;
+                    }
+                    $modalPpload.find('#update-list').append('<br/><br/><br/>');
+
+                    $.each(data.updates, function () {
+                    	var id = '';
+                        if (this.project_update_id) {
+                        	id = this.project_update_id;
+                        }
+                        var title = '';
+                        if (this.title) {
+                            title = this.title;
+                        }
+                        var text = '';
+                        if (this.text) {
+                            text = this.text;
+                        }
+                        var date = '';
+                        if (this.created_at) {
+                            date = this.created_at;
+                        }
+
+                     
+                        var divEl = $('<div />');
+                        divEl.attr('data-uptdate-id', id);
+                        divEl.append(                                
+                                 '<a name="anker_'+id+'"></a>'
+                                + '<h4>'+title+'</h4>'
+                                + '<div class="small light lightgrey product-update-date">'+date+ '</div>'
+                                + text + '<br/><br/>'                                                                
+                            );                        
+
+                        var btnEdit = $('<button type="submit" class="btn btn-native btn-sm">Edit</button>');
+                        btnEdit.attr('data-change-update-btn',id);
+                        btnEdit.attr('data-change-title',title);
+                        btnEdit.attr('data-change-text',text);
+
+
+                        var btnDelete = $('<button type="submit" class="btn btn-native btn-sm">Delete</button>');
+                        btnDelete.attr('data-delete-update-btn',id);
+
+                        divEl.append(btnEdit);
+                        divEl.append('&nbsp;&nbsp;');
+                        divEl.append(btnDelete);
+                        divEl.append('<br/><br/><br/><br/>');
+
+                        $modalPpload.find('#update-list').append(divEl);                        
+
+					});
+                },
+                error: function (jqXHR, textStatus, errorThrown) {
+                    return;
+                }
+            });
+
+        }
+        
+        $modalPpload.on('click', 'button[data-add-update-btn]', function (event) {
+            //var product_version = $modalPpload.find('#product-version').val();
+            var update_id = $modalPpload.find('#update-id').val();
+            var title = $modalPpload.find('#update-title').val();
+            var text = $modalPpload.find('#update-text').val();
+            var productId = $modalPpload.attr('data-product-id');
+            event.preventDefault();
+
+            $.ajax({
+                url: '/p/'+productId+'/saveupdateajax',
+                type: 'POST',
+                data: {title: title, text: text, update_id: update_id/*, product_version: product_version*/},
+                dataType: 'json',
+                success: function (data, textStatus, jqXHR) {
+                    if (data.status != 'success') {
+                        return;
+                    }
+                    //$modalPpload.find('#product-version').val('');
+                    $modalPpload.find('#update-title').val('');
+                    $modalPpload.find('#update-text').val('');
+                    $modalPpload.find('#update-id').val('');
+
+                    //if(update_id) {
+                    	getUpdates();
+                    //} else {
+                    //	$modalPpload.modal('hide');
+                    //	location.reload();
+                    //}
+                },
+                error: function (jqXHR, textStatus, errorThrown) {
+                    return;
+                }
+            });
+
+        });
+
+
+        $modalPpload.on('click', 'button[data-delete-update-btn]', function (event) {
+        	var updateId = $(this).attr('data-delete-update-btn');
+        	var productId = $modalPpload.attr('data-product-id');
+            event.preventDefault();
+
+        	$.ajax({
+                url: '/p/'+productId+'/deleteupdateajax',
+                type: 'POST',
+                data: {update_id: updateId},
+                dataType: 'json',
+                success: function (data, textStatus, jqXHR) {
+                    if (data.status != 'success') {
+                        alert('Update could not be deleted!');
+                        return;
+                    }
+                    getUpdates();
+                },
+                error: function (jqXHR, textStatus, errorThrown) {
+                    return;
+                }
+            });
+
+        });
+
+        $modalPpload.on('click', 'button[data-change-update-btn]', function (event) {
+        	var updateId = $(this).attr('data-change-update-btn');
+        	var title = $(this).attr('data-change-title');
+        	var text = $(this).attr('data-change-text');
+        	var productId = $modalPpload.attr('data-product-id');
+
+            $modalPpload.find('#update-title').val(title);
+        	$modalPpload.find('#update-text').val(text);
+        	$modalPpload.find('#update-id').val(updateId);
+
+        	$modalPpload.find('#update-title').focus();
+
+            event.preventDefault();
+
+        });
+        
+        $modalPpload.on('click', 'button[data-updates-cancel-btn]', function (event) {
+            event.preventDefault();
+            $modalPpload.modal('hide');
+        });
+
+    });
+
+</script>
+
 <!-- ppload -->
 
 <div id="modal-ppload"
@@ -173,10 +402,12 @@ $this->inlineScript()->appendScript(
                 <span class="pull-left"><input type="checkbox"
                                                data-accept-checkbox=""> <?= $this->translate('I accept the ') ?>
                     <a href="/content/terms"><?= $this->translate('Terms and Conditions') ?></a></span>
+                
             </div>
             <div class="modal-footer">
                 <button class="btn btn-native pull-left"
                         data-addpploadfile-btn=""><?= $this->translate('Add File(s)') ?></button>
+                <button class="btn btn-danger pull-left" data-file-upload-cancel-btn=""><?= $this->translate('Cancel Upload') ?></button>
                 <?php /**
                 <button class="btn btn-native pull-left"
                         rel="tooltip"
@@ -188,36 +419,9 @@ $this->inlineScript()->appendScript(
                         data-deletepploadfiles-btn=""><?= $this->translate('Delete All') ?></button>
 				**/?>
                 
-                <button class="btn btn-danger pull-right"
-                        data-file-upload-cancel-btn=""><?= $this->translate('Cancel Upload') ?></button>
-            </div>
-
-            <div class="modal-header">
-                <h3 id="modal-ppload-label"><?= $this->translate('Changelog') ?></h3>
-            </div>
-            <div class="modal-body" style="font-size: small;">
-	            <div role="form" class="">
-	            	<input type="hidden" id="update-id" data-update-id="" id="update-id" value="">
-				    <div class="form-group">
-				      <label for="tile">Product Version:</label>
-				      <input type="text" id="product-version" data-product-version="" class="form-control input-sm" id="title" placeholder="Product Version Number">
-				    </div>
-	            	<div class="form-group">
-				      <label for="tile">Changelog Title:</label>
-				      <input type="text" id="update-title" data-update-title="" class="form-control input-sm" id="title" placeholder="Enter a Changelog Title">
-				    </div>
-				    <div class="form-group">
-				      <label for="text">Changelog Text:</label>
-				      <textarea id="update-text" data-update-text="" class="form-control input-sm" rows="3" placeholder="Enter a Changelog Text"></textarea>
-				    </div>
-				    <button class="btn btn-native pull-right btn-xs btn-file-action" data-file-upload-ok-btn=""><?= $this->translate('Cancel') ?></button>
-				    <button type="submit" class="btn btn-native pull-right btn-xs btn-file-action" data-add-update-btn="">Save</button>
-				</div>
-
-            	<article id="update-list">
-            	</article>
-
-
+                <button class="btn btn-native pull-right" data-ppload-cancel-btn=""><?= $this->translate('Cancel') ?></button>
+                
+                
             </div>
             <div class="modal-footer">
 
@@ -1089,9 +1293,9 @@ $this->inlineScript()->appendScript(
                 getPploadFiles();
             }
 
-            if ($modalPpload.attr('data-product-id')) {
-                getUpdates();
-            }
+            //if ($modalPpload.attr('data-product-id')) {
+            //    getUpdates();
+            //}
 
         });
 
@@ -1180,7 +1384,7 @@ $this->inlineScript()->appendScript(
             $(this).tooltip('hide'); // workaround to hide the tooltip
         });**/
 
-        $modalPpload.on('click', 'button[data-file-upload-ok-btn]', function (event) {
+        $modalPpload.on('click', 'button[data-ppload-cancel-btn]', function (event) {
             event.preventDefault();
             $modalPpload.modal('hide');
         });
