--- a/application/modules/default/views/scripts/settings/partials/github.phtml
+++ b/application/modules/default/views/scripts/settings/partials/github.phtml
@@ -37,7 +37,8 @@
               data-trigger="#github-trigger">
             <div class="row">
                 <div class="col-md-4 col-lg-4 col-sm-4 col-xs-4">
-                    <?= $this->github->link_github->setAttrib('tabindex', 11) ?>
+                  <?= $this->github->link_github->setAttrib('tabindex', 11)->setAttrib('class', 'form-control') ?>
+                  <p class="help-block small">Insert the full URL for your Github profile here.</p>
                 </div>
             </div>
             <!-- /.row-fluid -->
