--- a/application/modules/default/views/scripts/settings/partials/github.phtml
+++ b/application/modules/default/views/scripts/settings/partials/github.phtml
@@ -37,11 +37,26 @@
               data-trigger="#github-trigger">
             <div class="row">
                 <div class="col-md-4 col-lg-4 col-sm-4 col-xs-4">
-                  <?= $this->github->link_github->setAttrib('tabindex', 11)->setAttrib('class', 'form-control') ?>
-                  <p class="help-block small">Insert the full URL for your Github profile here.</p>
+                  <?= $this->github->link_github
+                      ->setAttrib('tabindex', 11)
+                      ->setAttrib('class', 'form-control')
+                      ->setAttrib('pattern', '^\w+-?\w+(?!-)$')
+                  ?>
+                  <p class="help-block small">Insert your Github username here.</p>
                 </div>
             </div>
-            <!-- /.row-fluid -->
+          <div class="row">
+            <div class="col-md-4 col-lg-4 col-sm-4 col-xs-4">
+                <?= $this->github->token_github
+                    ->setAttrib('tabindex', 11)
+                    ->setAttrib('class', 'form-control')
+                    ->setAttrib('pattern', '^[\w\-\.\/\+\~]+$')
+                ?>
+              <p class="help-block small">Insert your access token value from Github here.</p>
+            </div>
+          </div>
+
+          <!-- /.row-fluid -->
             <hr>
             <div class="row">
                 <div class="box pull-left margin-left-15" style="padding-left: 15px;">
