register and login for github added
settings page - field for personal access token added

--- a/application/modules/default/views/scripts/authorization/login.phtml
+++ b/application/modules/default/views/scripts/authorization/login.phtml
@@ -41,13 +41,17 @@ $buildMemberUrl = new Default_View_Helper_BuildMemberUrl();
                     <div class="bottom">
                         <div id="show-login-description" class="small light lightgrey">Join us?</div>
                         <div class="login2">
-                            <a href="/register/"
-                               id="show-login-form"
-                               class="btn btn-native btn-min-width">
+                            <a href="/register/" id="show-login-form" class="btn btn-native btn-min-width">
                                 <i class="icon-white icon-lock"></i>
                                 Register
                             </a>
                         </div>
+                      <div class="login2 margin-top-15">
+                        <a href="/login/github/" class="btn btn-native btn-min-width">
+                          <i class="icon-white icon-lock"></i>
+                          With Github
+                        </a>
+                      </div>
                     </div>
                 </div>
             </div>
