--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -399,7 +399,7 @@ $productFileInfos = $this->projectFiles($this->product->ppload_collection_id);
                                     <?php endif; ?>   
                                     <?php if (!empty($this->product->member_id) && $helperUserIsOwner->userIsOwner($this->product->member_id)) : ?>
                                       <div class="prod-download">  
-                                        <a id="inline" href="/edit"><div class="txt"><span>Edit Product</span></div></a>
+                                        <a id="inline" href="edit"><div class="txt"><span>Edit Product</span></div></a>
                                       </div>
                                     <?php endif; ?> 
                                   </div>   
