updated register page and user settings page

--- a/application/modules/default/views/scripts/authorization/register.phtml
+++ b/application/modules/default/views/scripts/authorization/register.phtml
@@ -42,9 +42,7 @@ $helperImage = new Default_View_Helper_Image();
                     <div class="bottom">
                         <div id="show-login-description" class="small light lightgrey">Already have an account?</div>
                         <div class="login2">
-                            <a href="/login/"
-                               id="show-login-form"
-                               class="small">
+                            <a href="/login/" id="show-login-form" class="btn btn-native btn-min-width">
                                 <i class="icon-white icon-lock"></i>
                                 Login
                             </a>
