--- a/application/modules/default/views/scripts/settings/partials/github.phtml
+++ b/application/modules/default/views/scripts/settings/partials/github.phtml
@@ -20,7 +20,7 @@
  *    along with this program.  If not, see <http://www.gnu.org/licenses/>.
  **/
 $modelMemberToken = new Default_Model_DbTable_MemberToken();
-$tokenData = $modelMemberToken->fetchRow('token_member_id = ' . Zend_Auth::getInstance()->getIdentity()->member_id . ' and token_deleted is null');
+$tokenData = $modelMemberToken->fetchRow('token_member_id = ' . Zend_Auth::getInstance()->getIdentity()->member_id . ' and token_deleted is null and token_provider_name = "github_personal"');
 $tokenValue = isset($tokenData->token_value) ? $tokenData->token_value : null;
 ?>
 <div class="panel-heading">
