github login deactivated

--- a/application/modules/default/views/scripts/authorization/login.phtml
+++ b/application/modules/default/views/scripts/authorization/login.phtml
@@ -42,16 +42,16 @@ $buildMemberUrl = new Default_View_Helper_BuildMemberUrl();
                 </div>
                 <!-- END #register-box -->
               <div id="social-register" class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                <h3>Sign in</h3>
+                <h3></h3>
 
                 <div id="social-login-elements">
-                  <div class="register-facebook">
+                  <?php /*<div class="register-facebook">
 
                     <a  href="/login/github/" class="btn btn-block btn-social btn-github">
                       <span class="fa fa-github"></span>
                       with Github
                     </a>
-                  </div>
+                  </div> */ ?>
 
                   <div class="bottom margin-top-15">
                     <div id="show-login-description" class="small light lightgrey">Join us?</div>
