--- a/application/modules/backend/views/scripts/store/index.phtml
+++ b/application/modules/backend/views/scripts/store/index.phtml
@@ -150,6 +150,12 @@
                     title: 'google id',
                     width: '10%'
                 },
+                package_type: {
+                    title: 'package type',
+                    width: '10%',
+                    options: { '':'', '1': 'AppImage', '2': 'Android (apk)', '3': 'OS X compatible','4': 'Windows executable',},
+                    defaultValue: ''
+                },
                 initSearchIndex: {
                     title: '',
                     width: '1%',
