add github import

--- a/application/modules/default/views/scripts/product/add.phtml
+++ b/application/modules/default/views/scripts/product/add.phtml
@@ -268,10 +268,15 @@ $categoryPath[] = $valueCatId;
                                             </span>
                                             </div>
                                             <div class="modal-footer">
-                                                <button class="btn btn-native pull-left"
-                                                        data-addpploadfile-btn=""><?= $this->translate('Add File(s)') ?></button>
-                                                <button class="btn btn-danger pull-right"
-                                                        data-file-upload-cancel-btn=""><?= $this->translate('Cancel Upload') ?></button>
+                                                <button class="btn btn-native pull-left" data-addpploadfile-btn="">
+                                                    <?= $this->translate('Add File(s)') ?>
+                                                </button>
+                                                <button class="btn btn-danger pull-right" data-file-upload-cancel-btn="">
+                                                    <?= $this->translate('Cancel Upload') ?>
+                                                </button>
+                                                <button class="btn btn-info pull-right">
+                                                    <?= $this->translate('pick from github') ?>
+                                                </button>
                                             </div>
                                         </div>
 
