--- a/application/modules/default/views/scripts/user/products.phtml
+++ b/application/modules/default/views/scripts/user/products.phtml
@@ -398,15 +398,23 @@ $this->inlineScript()->appendScript(
             </div>
 
             <div class="modal-footer" style="margin-top: 20px;">
-                <span class="pull-left"><input type="checkbox"
-                                               data-accept-checkbox=""> <?= $this->translate('I accept the ') ?>
-                    <a href="/content/terms"><?= $this->translate('Terms and Conditions') ?></a></span>
+                <span class="pull-left">
+                    <input type="checkbox" data-accept-checkbox="">
+                    <?= $this->translate('I accept the ') ?>
+                    <a href="/content/terms"><?= $this->translate('Terms and Conditions') ?></a>
+                </span>
                 
             </div>
             <div class="modal-footer">
-                <button class="btn btn-native pull-left"
-                        data-addpploadfile-btn=""><?= $this->translate('Add File(s)') ?></button>
-                <button class="btn btn-danger pull-left" data-file-upload-cancel-btn=""><?= $this->translate('Cancel Upload') ?></button>
+                <button class="btn btn-native pull-left" data-addpploadfile-btn="">
+                    <?= $this->translate('Add File(s)') ?>
+                </button>
+                <button class="btn btn-danger pull-left" data-file-upload-cancel-btn="">
+                    <?= $this->translate('Cancel Upload') ?>
+                </button>
+                <button id="github_picker" class="btn btn-native pull-left" data-toggle="" data-target="#generic-dialog" data-username="<?=$this->member->link_github?>">
+                    <?= $this->translate('Pick from github') ?>
+                </button>
                 <?php /**
                 <button class="btn btn-native pull-left"
                         rel="tooltip"
@@ -417,10 +425,7 @@ $this->inlineScript()->appendScript(
                 <button class="btn btn-danger pull-left"
                         data-deletepploadfiles-btn=""><?= $this->translate('Delete All') ?></button>
 				**/?>
-                
                 <button class="btn btn-native pull-right" data-ppload-cancel-btn=""><?= $this->translate('Cancel') ?></button>
-                
-                
             </div>
             <div class="modal-footer">
 
@@ -432,7 +437,58 @@ $this->inlineScript()->appendScript(
 <script type="text/javascript">
 
     $(function () {
-    	var Base64={_keyStr:"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/=",encode:function(e){var t="";var n,r,i,s,o,u,a;var f=0;e=Base64._utf8_encode(e);while(f<e.length){n=e.charCodeAt(f++);r=e.charCodeAt(f++);i=e.charCodeAt(f++);s=n>>2;o=(n&3)<<4|r>>4;u=(r&15)<<2|i>>6;a=i&63;if(isNaN(r)){u=a=64}else if(isNaN(i)){a=64}t=t+this._keyStr.charAt(s)+this._keyStr.charAt(o)+this._keyStr.charAt(u)+this._keyStr.charAt(a)}return t},decode:function(e){var t="";var n,r,i;var s,o,u,a;var f=0;e=e.replace(/[^A-Za-z0-9\+\/\=]/g,"");while(f<e.length){s=this._keyStr.indexOf(e.charAt(f++));o=this._keyStr.indexOf(e.charAt(f++));u=this._keyStr.indexOf(e.charAt(f++));a=this._keyStr.indexOf(e.charAt(f++));n=s<<2|o>>4;r=(o&15)<<4|u>>2;i=(u&3)<<6|a;t=t+String.fromCharCode(n);if(u!=64){t=t+String.fromCharCode(r)}if(a!=64){t=t+String.fromCharCode(i)}}t=Base64._utf8_decode(t);return t},_utf8_encode:function(e){e=e.replace(/\r\n/g,"\n");var t="";for(var n=0;n<e.length;n++){var r=e.charCodeAt(n);if(r<128){t+=String.fromCharCode(r)}else if(r>127&&r<2048){t+=String.fromCharCode(r>>6|192);t+=String.fromCharCode(r&63|128)}else{t+=String.fromCharCode(r>>12|224);t+=String.fromCharCode(r>>6&63|128);t+=String.fromCharCode(r&63|128)}}return t},_utf8_decode:function(e){var t="";var n=0;var r=c1=c2=0;while(n<e.length){r=e.charCodeAt(n);if(r<128){t+=String.fromCharCode(r);n++}else if(r>191&&r<224){c2=e.charCodeAt(n+1);t+=String.fromCharCode((r&31)<<6|c2&63);n+=2}else{c2=e.charCodeAt(n+1);c3=e.charCodeAt(n+2);t+=String.fromCharCode((r&15)<<12|(c2&63)<<6|c3&63);n+=3}}return t}}
+
+        $('body').on("click", "#github_picker", function (event) {
+            $.ajax({
+                url: "https://api.github.com/users/"+$(this).attr('data-username')+"/repos",
+                dataType: "jsonp",
+                success: function (returned_data) {
+                    html = '<div class="list-group">';
+                    $.each( returned_data.data, function ( i, item ) {
+                        console.log(i);
+                        console.log(item);
+                        html += '<a class="list-group-item github-repository-name" href="" data-archive_url="'+item.archive_url.replace('{archive_format}', 'zipball').replace('{/ref}','')+'"';
+                        html += 'data-description="'+item.description+'"';
+                        html += 'data-filename="'+item.name+'"';
+                        html += 'data-projectid="'+$('#modal-ppload').attr('data-product-id')+'"';
+                        html += '>';
+                        html += item.name;
+                        html += '</a>';
+                    });
+                    html += "</div>";
+
+                    var msgBox = $('#generic-dialog');
+                    msgBox.modal('hide');
+                    msgBox.find('.modal-header-text').empty().append('Choose your repository:');
+                    msgBox.find('.modal-body').empty().append(html);
+                    setTimeout(function () {
+                        msgBox.modal('show');
+                    }, 900);
+                }
+            });
+        });
+
+        $('body').on('click', 'a.github-repository-name', function(event) {
+            event.preventDefault();
+            $.ajax({
+                url: '/file/pplink/',
+                type: 'post',
+                data: {
+                    pid: $(this).attr('data-projectid'),
+                    u: $(this).attr('data-archive_url'),
+                    fn: $(this).attr('data-filename'),
+                    fd: $(this).attr('data-description')
+                },
+                success: function(returned_data) {
+                    console.log(returned_data);
+                    data_file = returned_data.file;
+                    $modalPpload.attr('data-ppload-collection-id', data_file.collection_id);
+                    getPploadFiles();
+                }
+            });
+        });
+
+        var Base64={_keyStr:"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/=",encode:function(e){var t="";var n,r,i,s,o,u,a;var f=0;e=Base64._utf8_encode(e);while(f<e.length){n=e.charCodeAt(f++);r=e.charCodeAt(f++);i=e.charCodeAt(f++);s=n>>2;o=(n&3)<<4|r>>4;u=(r&15)<<2|i>>6;a=i&63;if(isNaN(r)){u=a=64}else if(isNaN(i)){a=64}t=t+this._keyStr.charAt(s)+this._keyStr.charAt(o)+this._keyStr.charAt(u)+this._keyStr.charAt(a)}return t},decode:function(e){var t="";var n,r,i;var s,o,u,a;var f=0;e=e.replace(/[^A-Za-z0-9\+\/\=]/g,"");while(f<e.length){s=this._keyStr.indexOf(e.charAt(f++));o=this._keyStr.indexOf(e.charAt(f++));u=this._keyStr.indexOf(e.charAt(f++));a=this._keyStr.indexOf(e.charAt(f++));n=s<<2|o>>4;r=(o&15)<<4|u>>2;i=(u&3)<<6|a;t=t+String.fromCharCode(n);if(u!=64){t=t+String.fromCharCode(r)}if(a!=64){t=t+String.fromCharCode(i)}}t=Base64._utf8_decode(t);return t},_utf8_encode:function(e){e=e.replace(/\r\n/g,"\n");var t="";for(var n=0;n<e.length;n++){var r=e.charCodeAt(n);if(r<128){t+=String.fromCharCode(r)}else if(r>127&&r<2048){t+=String.fromCharCode(r>>6|192);t+=String.fromCharCode(r&63|128)}else{t+=String.fromCharCode(r>>12|224);t+=String.fromCharCode(r>>6&63|128);t+=String.fromCharCode(r&63|128)}}return t},_utf8_decode:function(e){var t="";var n=0;var r=c1=c2=0;while(n<e.length){r=e.charCodeAt(n);if(r<128){t+=String.fromCharCode(r);n++}else if(r>191&&r<224){c2=e.charCodeAt(n+1);t+=String.fromCharCode((r&31)<<6|c2&63);n+=2}else{c2=e.charCodeAt(n+1);c3=e.charCodeAt(n+2);t+=String.fromCharCode((r&15)<<12|(c2&63)<<6|c3&63);n+=3}}return t}}
 
         $('button[rel="tooltip"]').tooltip();
 
@@ -1105,7 +1161,6 @@ $this->inlineScript()->appendScript(
             });
         }
 
-
         function updatePploadFileTags(fileId, fileTags) {
             $.ajax({
                 url: $modalPpload.attr('data-updatepploadfile-uri'),
@@ -1509,7 +1564,6 @@ $this->inlineScript()->appendScript(
             event.preventDefault();
 
         });
-
 
     });
 
