--- a/application/modules/default/views/scripts/community/index.phtml
+++ b/application/modules/default/views/scripts/community/index.phtml
@@ -21,8 +21,11 @@
  **/
 
 $helperImage = new Default_View_Helper_Image();
-$newUsers = new Default_View_Helper_NewUsers();
-$users = $newUsers->newUsers($limit = 12);
+//$newUsers = new Default_View_Helper_NewUsers();
+//$users = $newUsers->newUsers($limit = 12);
+
+$modelInfo = new Default_Model_Info();
+$users = $modelInfo->getNewActiveMembers(12);
 
 $recentDonations = new Default_View_Helper_FetchRecentDonations();
 $donations = $recentDonations->fetchRecentDonations($limit = 12);
@@ -66,7 +69,7 @@ $totalAMountSupported = new Default_View_Helper_FetchTotalAmountSupported();
 
                     <div class="bottom">
 
-                        <a class="btn btn-native" href="/register">Register</a> for free to join the xyz community
+                        <a class="btn btn-native" href="/register">Register</a> to join the community
 
                     </div>
 
@@ -85,37 +88,13 @@ $totalAMountSupported = new Default_View_Helper_FetchTotalAmountSupported();
 
             <div id="community-tabs" style="margin-bottom:20px;">
                 <ul class="nav nav-tabs">
-                    <li class="active"><a href="#newMemberPanel" data-toggle="tab"><?= $this->translate('New Members') ?></a></li>                  
-                    <li><a href="#recentDonationsPanel" data-toggle="tab"><?= $this->translate('Recent Donations') ?></a></li>
+                    <li class="active"><a href="#recentDonationsPanel" data-toggle="tab"><?= $this->translate('Recent Donations') ?></a></li>
+                    <li><a href="#newMemberPanel" data-toggle="tab"><?= $this->translate('New Members') ?></a></li>
                 </ul>
             </div>
         
         <div class="tab-content" id="communityPanels">
-            <div class="row tab-pane active" id="newMemberPanel">
-                <div class="list col-lg-10 col-md-10 col-sm-10 col-xs-10 "
-                     id="new-members">              
-                    <?php foreach ($users as $key => $user) {
-                        $age = $humanTiming->humanTiming($user['created_at']);
-                        ?>
-
-                        <div class="user col-lg-1 col-md-2 col-sm-2 col-xs-2">
-                            <div class="u-wrap">
-                                <a href="<?php echo $buildMemberUrl->buildMemberUrl($user['member_id']); ?>">
-                                    <figure >
-                                        <img src="<?php echo $helperImage->Image($user['profile_image_url'], array('width' => '200', 'height' => '200', 'crop' => 2)); ?>"/>
-                                    </figure>
-                                    <h3 class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><?php echo $user['username']; ?></h3>
-
-                                    <p class="small"><b><?= $age['age'] ?></b> <?= $age['unit'] ?></p>
-                                </a>
-                            </div>
-                        </div>
-
-                    <?php } ?>
-
-                </div>
-            </div> <!-- end row -->
-            <div class="row tab-pane"  id="recentDonationsPanel">
+            <div class="row tab-pane active"  id="recentDonationsPanel">
                 <div class="list col-lg-10 col-md-10 col-sm-10 col-xs-10 " id="top-supporters">
 
                    
@@ -146,6 +125,31 @@ $totalAMountSupported = new Default_View_Helper_FetchTotalAmountSupported();
                 </div>
                
             </div> <!-- end row -->
+            <div class="row tab-pane" id="newMemberPanel">
+                <div class="list col-lg-10 col-md-10 col-sm-10 col-xs-10 "
+                     id="new-members">
+                    <?php foreach ($users as $key => $user) {
+                        $age = $humanTiming->humanTiming($user['created_at']);
+                        ?>
+
+                        <div class="user col-lg-1 col-md-2 col-sm-2 col-xs-2">
+                            <div class="u-wrap">
+                                <a href="<?php echo $buildMemberUrl->buildMemberUrl($user['member_id']); ?>">
+                                    <figure >
+                                        <img src="<?php echo $helperImage->Image($user['profile_image_url'], array('width' => '200', 'height' => '200', 'crop' => 2)); ?>"/>
+                                    </figure>
+                                    <h3 class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><?php echo $user['username']; ?></h3>
+
+                                    <p class="small"><b><?= $age['age'] ?></b> <?= $age['unit'] ?></p>
+                                </a>
+                            </div>
+                        </div>
+
+                    <?php } ?>
+
+                </div>
+            </div> <!-- end row -->
+
         </div>
         </section>
 
