updated add/edit form

--- a/application/modules/default/views/scripts/product/viewscripts/input_image_small_upload.phtml
+++ b/application/modules/default/views/scripts/product/viewscripts/input_image_small_upload.phtml
@@ -30,7 +30,7 @@
     </div>
     <div class="col-sm-12">
         <div id="product-picture-container">
-            <img id="product-picture-preview" src="/images_sys/empty_110.png" alt="product picture" width="110"/>
+            <img id="product-picture-preview" src="" alt="product picture" width="110"/>
         </div>
         <button class="btn btn-purple add-picture margin-top-15"
                 id="add-product-picture"
