--- a/application/modules/default/views/scripts/product/viewscripts/input_image_upload_product.phtml
+++ b/application/modules/default/views/scripts/product/viewscripts/input_image_upload_product.phtml
@@ -31,7 +31,7 @@
         ADD LOGO
     </button>
     <div id="product-picture-container">
-        <img id="product-picture-preview" src="/images_sys/empty_110.png" alt="product picture" width="110"/>
+        <img id="product-picture-preview" src="" alt="product picture" width="110"/>
     </div>
     <?php
     echo $this->content ?>
