updated button in filemanager

--- a/application/modules/default/views/scripts/product/add.phtml
+++ b/application/modules/default/views/scripts/product/add.phtml
@@ -275,7 +275,7 @@ $categoryPath[] = $valueCatId;
                                                     <?= $this->translate('Cancel Upload') ?>
                                                 </button>
                                                 <a role="button" id="github_picker" class="btn btn-native pull-left" data-toggle="" data-target="#generic-dialog" data-username="<?=$this->member->link_github?>" title="add an URL here">
-                                                    <?= $this->translate('add github file') ?>
+                                                    <?= $this->translate('Add github file') ?>
                                                 </a>
                                             </div>
                                         </div>
