add package_type Debian

--- a/application/modules/default/views/scripts/user/products.phtml
+++ b/application/modules/default/views/scripts/user/products.phtml
@@ -958,7 +958,7 @@ $this->inlineScript()->appendScript(
                         + '<td>' + data.file.type + '</td>'
                         + '<td>'
                         + '<select id="data-select-packagetype' + data.file.id + '" data-packagetype-id=" name="packagetype" class="form-control input-sm" style="width: 200px;">'
-                        + '<option value=\"\"></option><option value=\"1\">AppImage</option><option value=\"2\">Android (APK)</option><option value=\"3\">OS X compatible</option><option value=\"4\">Windows executable</option>'
+                        + '<option value=\"\"></option><option value=\"1\">AppImage</option><option value=\"5\">Debian</option><option value=\"2\">Android (APK)</option><option value=\"3\">OS X compatible</option><option value=\"4\">Windows executable</option>'
                         + '</select>'
                         + '</td>'
                         + '<td>' + data.file.created_timestamp + '</td>'
