updated add.phtml : Corrected HTML code

--- a/application/modules/default/views/scripts/product/add.phtml
+++ b/application/modules/default/views/scripts/product/add.phtml
@@ -275,7 +275,7 @@ $categoryPath[] = $valueCatId;
                                                     <?= $this->translate('Cancel Upload') ?>
                                                 </button>
                                                 <a role="button" id="github_picker" class="btn btn-native pull-left" data-toggle="" data-target="#generic-dialog" data-username="<?=$this->member->link_github?>" title="add an URL here">
-                                                    <?= $this->translate('Add github file') ?>
+                                                    <?= $this->translate('Add GitHub File') ?>
                                                 </a>
                                             </div>
                                         </div>
@@ -318,7 +318,7 @@ $categoryPath[] = $valueCatId;
 
                                             html = '<form id="git-url-form">' +
                                                 '<div class="form-group">' +
-                                                '<input type="url" class="form-control" id="git-url" placeholder="put URL to Github release here" required="required" pattern="^https:\/\/(?:www\.)?github\.com\/.+$">' +
+                                                '<input type="url" class="form-control" id="git-url" placeholder="put URL to GitHub release here" required="required" pattern="^https:\/\/(?:www\.)?github\.com\/.+$">' +
                                                 '<span id="git-url-help" class="help-block small"></span></div>' +
                                                 '<button type="submit" class="btn btn-default btn-sm" id="git-url-submit">Submit</button>' +
                                                 '</form>';
