--- a/application/modules/default/views/scripts/user/products.phtml
+++ b/application/modules/default/views/scripts/user/products.phtml
@@ -125,17 +125,17 @@ $this->inlineScript()->appendScript(
             </div>
             <div class="modal-body" style="font-size: small;">
 	            <div role="form" class="">
-	            	<input type="hidden" id="update-id" data-update-id="" id="update-id" value="">
+	            	<input type="hidden" id="update-id" data-update-id="" value="">
                         <?php /**
 				    <div class="form-group">
 				      <label for="tile">Product Version:</label>
-				      <input type="text" id="product-version" data-product-version="" class="form-control input-sm" id="title" placeholder="Product Version Number">
+				      <input type="text" id="product-version" data-product-version="" class="form-control input-sm" placeholder="Product Version Number">
 				    </div>
                          * 
                          */?>
 	            	<div class="form-group">
 				      <label for="tile">Changelog Title:</label>
-				      <input type="text" id="update-title" data-update-title="" class="form-control input-sm" id="title" placeholder="Enter a Changelog Title">
+				      <input type="text" id="update-title" data-update-title="" class="form-control input-sm" placeholder="Enter a Changelog Title">
 				    </div>
 				    <div class="form-group">
 				      <label for="text">Changelog Text:</label>
@@ -153,8 +153,6 @@ $this->inlineScript()->appendScript(
             <div class="modal-footer">
 
             </div>
-            </div>
-        </div>
     </div>
 </div>
 
@@ -413,18 +411,8 @@ $this->inlineScript()->appendScript(
                     <?= $this->translate('Cancel Upload') ?>
                 </button>
                 <button id="github_picker" class="btn btn-native pull-left" data-toggle="" data-target="#generic-dialog" data-username="<?=$this->member->link_github?>" title="add an URL here">
-                    <?= $this->translate('Add github file') ?>
+                    <?= $this->translate('Add GitHub File') ?>
                 </button>
-                <?php /**
-                <button class="btn btn-native pull-left"
-                        rel="tooltip"
-                        data-placement="top"
-                        data-original-title="<?= $this->translate('Finalized Torrents can not be changed later, only deleted.') ?>"
-                        data-finalizepploadcollection-btn=""><?= $this->translate('Finalize') ?></button>
-                
-                <button class="btn btn-danger pull-left"
-                        data-deletepploadfiles-btn=""><?= $this->translate('Delete All') ?></button>
-				**/?>
                 <button class="btn btn-native pull-right" data-ppload-cancel-btn=""><?= $this->translate('Cancel') ?></button>
             </div>
             <div class="modal-footer">
@@ -442,7 +430,7 @@ $this->inlineScript()->appendScript(
 
             html = '<form id="git-url-form">' +
                 '<div class="form-group">' +
-                '<input type="url" class="form-control" id="git-url" placeholder="put URL to Github release here" required="required" pattern="^https:\/\/(?:www\.)?github\.com\/.+$">' +
+                '<input type="url" class="form-control" id="git-url" placeholder="put URL to download files here" required="required" pattern="^https:\/\/(?:www\.)?github\.com\/.+$" />' +
                 '<span id="git-url-help" class="help-block small"></span></div>' +
                 '<button type="submit" class="btn btn-default btn-sm" id="git-url-submit">Submit</button>' +
                 '</form>';
@@ -720,13 +708,13 @@ $this->inlineScript()->appendScript(
                             + '<td>' + version + '</td>'
                             + '<td>' + inputFileDescription + '</td>'
                             + '<td>'
-                            + '<select id="data-select-license' + this.id + '" data-license-id=" name="license" class="form-control input-sm">'
+                            + '<select id="data-select-license' + this.id + '" data-license-id="" name="license" class="form-control input-sm">'
                             + '<option value=\"1000\"></option><option value=\"16\">AGPL</option><option value=\"3\">Artistic 2.0</option><option value=\"6\">BSD</option><option value=\"17\">CC0 1.0 Universal (Public Domain)</option><option value=\"9\">CPL 1.0</option><option value=\"10\">Creative Commons by</option><option value=\"13\">Creative Commons by-nc</option><option value=\"15\">Creative Commons by-nc-nd</option><option value=\"14\">Creative Commons by-nc-sa</option><option value=\"12\">Creative Commons by-nd</option><option value=\"11\">Creative Commons by-sa</option><option value=\"8\">GFDL</option><option value=\"1\">GPL</option><option value=\"2\">LGPL</option><option value=\"0\">Other</option><option value=\"7\">Proprietary License</option><option value=\"5\">QPL</option><option value=\"4\">X11</option>'
                             + '</select><span id="file-tag-license'+this.id+'"><span id="file-tag-license-text'+this.id+'">'
                             + '</td>'
                             + '<td>' + this.type + '</td>'
                             + '<td>'
-                            + '<select id="data-select-packagetype' + this.id + '" data-packagetype-id=" name="packagetype" class="form-control input-sm" style="width: 200px;">'
+                            + '<select id="data-select-packagetype' + this.id + '" data-packagetype-id="" name="packagetype" class="form-control input-sm" style="width: 200px;">'
                             + '<option value=\"\"></option><option value=\"1\">AppImage</option><option value=\"6\">Snappy</option><option value=\"5\">Debian</option><option value=\"2\">Android (APK)</option><option value=\"3\">OS X compatible</option><option value=\"4\">Windows executable</option>'
                             + '</select>'
                             + '</td>'
@@ -819,7 +807,7 @@ $this->inlineScript()->appendScript(
                     if (hasFinalized) {
                         $modalPpload.find('tr[data-ppload-file-id] select[data-os-id]').attr('disabled', 'disabled');
 
-                        $modalPpload.find('div[info-finalized]').append('<?= $this->translate('<br/><b>Your files are finalized (and via torrent downloadable). If you want to add new files, click on "Delete All" and upload all of your files again.</b>')?>');
+                        $modalPpload.find('div[info-finalized]').append('<br/><b>Your files are finalized (and via torrent downloadable). If you want to add new files, click on "Delete All" and upload all of your files again.</b>');
                         $modalPpload.find('input[data-accept-checkbox]').attr('disabled', 'disabled');
 
                         $modalPpload.find('p[data-file-upload-msg]').hide();
@@ -1008,17 +996,17 @@ $this->inlineScript()->appendScript(
                         '<tr data-ppload-file-id="' + data.file.id + '" data-ppload-file-category="' + fileCategory + '" data-ppload-file-tags="' + fileTags + '">'
                         + '<td><a href="' + pploadApiUri + 'files/download/id/' + data.file.id + '/' + data.file.name + '">' + data.file.name + '</a></td>'
                         + '<td>' + version + '</td>' 
-                        + '<td><input data-ppload-file-description="" class="form-control input-sm'
+                        + '<td><input data-ppload-file-description="" class="form-control input-sm"'
                         + ' type="text" maxlength="140" placeholder="File description"'
                         + ' value="' + fileDescription + '"></td>'
                         + '<td>'
-                        + '<select id="data-select-license' + data.file.id + '" data-license-id=" name="license" class="form-control input-sm">'
+                        + '<select id="data-select-license' + data.file.id + '" data-license-id="" name="license" class="form-control input-sm">'
                         + '<option value=\"1000\"></option><option value=\"16\">AGPL</option><option value=\"3\">Artistic 2.0</option><option value=\"6\">BSD</option><option value=\"17\">CC0 1.0 Universal (Public Domain)</option><option value=\"9\">CPL 1.0</option><option value=\"10\">Creative Commons by</option><option value=\"13\">Creative Commons by-nc</option><option value=\"15\">Creative Commons by-nc-nd</option><option value=\"14\">Creative Commons by-nc-sa</option><option value=\"12\">Creative Commons by-nd</option><option value=\"11\">Creative Commons by-sa</option><option value=\"8\">GFDL</option><option value=\"1\">GPL</option><option value=\"2\">LGPL</option><option value=\"0\">Other</option><option value=\"7\">Proprietary License</option><option value=\"5\">QPL</option><option value=\"4\">X11</option>'
                         + '</select>'
                         + '</td>'
                         + '<td>' + data.file.type + '</td>'
                         + '<td>'
-                        + '<select id="data-select-packagetype' + data.file.id + '" data-packagetype-id=" name="packagetype" class="form-control input-sm" style="width: 200px;">'
+                        + '<select id="data-select-packagetype' + data.file.id + '" data-packagetype-id="" name="packagetype" class="form-control input-sm" style="width: 200px;">'
                         + '<option value=\"\"></option><option value=\"1\">AppImage</option><option value=\"6\">Snappy</option><option value=\"5\">Debian</option><option value=\"2\">Android (APK)</option><option value=\"3\">OS X compatible</option><option value=\"4\">Windows executable</option>'
                         + '</select>'
                         + '</td>'
@@ -1280,7 +1268,7 @@ $this->inlineScript()->appendScript(
                     $modalPpload.find('button[data-file-upload-ok-btn]').removeAttr('disabled');
                     $modalPpload.find('button[data-file-upload-cancel-btn]').attr('disabled', 'disabled');
 
-                    $modalPpload.find('div[info-finalized]').append('<?= $this->translate('<br/><b>Your files are finalized (and via torrent downloadable). If you want to add new files, click on "Delete All" and upload all of your files again.</b>')?>');
+                    $modalPpload.find('div[info-finalized]').append('<br/><b>Your files are finalized (and via torrent downloadable). If you want to add new files, click on "Delete All" and upload all of your files again.</b>');
                     $modalPpload.find('input[data-accept-checkbox]').attr('disabled', 'disabled');
 
                 },
